Changes in mirt 0.7.4

NEW FEATURES

- When itemtype all equal 'Rasch', '1PL', 'rsm', or 'grsm' in unidimensional models the latent 
  variance parameter is automatically freed and is estimated

- mixedmirt() more supportive of user defined input formulas, and now includes an internal 'items'
  argument to create the item design matrix used to estimate the intercepts. More closely mirrors 
  the outputed results from lme4 for Rasch models as well

- drop.zeros option added to extract.item and itemplot to reduce dimensionality of factor structures
  that contain slopes equal to zero

- EM tolerance (TOL argument) default dropped to .0001 (originally .001)

- type = 'score' and type = 'infoSE' added to plot() generic for expected total score and joint test
  standard error/information 

- custom latent mean and covariance matrix can be passed to fscores() for EAP, MAP, and EAPsum methods.
  Also applies to personfit() and itemfit() diagnostics 

- scores.only option to fscores() for returning just the estimated factor scores 

- bfactor can include NA values in the model to omit the estimation of specific factors for the 
  corresponding item

BUG FIXES

- missing data gradient bug fix in MH-RM for dichotomous item models

- global df fix for multidimensional confirmatory models 

- SEM information matrix computed with more accuracy (M-step was not identical to original EM), 
  and fixed when equality constrains are imposed


Changes in mirt 0.7.0

NEW FEATURES

- new '#PLNRM' models to fit Suh & Bolt (2010) nested logistic models 

- 'large' option added to estimation functions. Useful when the datasets being analysed are very 
  large and organizing the data becomes a computationally burdensome task that should be avoided when
  fitting new models. Also, overall faster handling of datasets  

- plot(), fitted(), and residuals() generic support added for MultipleGroup objects
