@@ -2,7 +2,9 @@ Changes in mirt 0.7.4
 
 NEW FEATURES
 
-- When itemtype all equal 'Rasch', '1PL', 'rsm', or 'grsm' in unidimensional models the latent 
+- increase number of draws in the Monte Carlo calculation of the log-likelihood from 3000 to 5000
+
+- when itemtype all equal 'Rasch', '1PL', 'rsm', or 'grsm' in unidimensional models the latent 
   variance parameter is automatically freed and is estimated
 
 - mixedmirt() more supportive of user defined input formulas, and now includes an internal 'items'
